<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="cancel">"Cancel"</string>
<string name="score">"Score"</string>
<string name="title_id">"ID"</string>
<string name="title_name">"Name"</string>
<string name="good">"Good"</string>
<string name="fair">"Fair"</string>
<string name="poor">"Poor"</string>
...
<string name="error_message_push">"The event with UID: %s. was uploaded without date. Please contact the administrator. "</string>
<string name="monitor_js_assessments">"Assessments undertaken"</string>
<string name="monitor_js_target">"Target"</string>
<string name="monitor_js_quality_of_care">"Quality of care: Last "</string>
<string name="monitor_js_months">" months"</string>

<string name="create">"Create"</string>
<string name="modify">"Modify"</string>

<string name="developer_option_summary">This feature activates the developer options</string>
<string name="developer_option_title">Show developer options</string>
<string name="export_data_option_title">Export database</string>
<string name="import_data_option_title">"Import database"</string>
<string name="google_play_required">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
...
