<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~
  ~ This file is part of QA App.
  ~
  ~  Health Network QIS App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Health Network QIS App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.eyeseetea.malariacare.views.CustomButton
        android:id="@+id/create_form_button" style="?android:textAppearanceMedium"
        android:layout_width="170dp" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/create_info_ok"
        android:textColor="@color/start_button_text"
        android:background="@drawable/button_round_border"
        app:bDimension="@string/font_size_level2"
        app:bFontName="@string/medium_font_name"
        android:layout_gravity="center_horizontal"
        />
</merge>