...

        <Button
            android:id="@+id/dynamic_positiveInt_btn"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:text="@string/ok"
            android:layout_margin="10dp"
            />

    </LinearLayout>

</TableRow>
